# py-shared

./: pyproject.toml
shared/: google_calendar.py  http.py  state.py  telegram.py
