[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eamon-shared"
version = "0.1.0"
description = "Shared utilities for Eamon's side projects"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "anthropic",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
